switch libraries, add arpeggiating chords

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	},
 	"dependencies": {
 		"@lucide/svelte": "^0.508.0",
+		"smplr": "^0.16.3",
 		"soundfont-player": "^0.12.0",
 		"tonal": "^6.4.1",
 		"webaudiofont": "^3.0.4"
